@@ -25,6 +25,8 @@
 
 CGAL_BEGIN_NAMESPACE
 
+// return the sign of the 5x5 determinant [P,Q,R,S,T]
+// where column [P] = transpose[px,py,pz,p^2 -wp,1]
 template <class FT>
 Oriented_side
 power_testC3( const FT &px, const FT &py, const FT &pz, const FT &pwt,
